--- a/style/style.css
+++ b/style/style.css
@@ -36,7 +36,7 @@ section {
   padding: 60px 0;
 }
 
-section:nth-of-type(2n+1) {
+.req section:nth-of-type(2n+1) {
   background-color: #5499C7;
   color: #ffffff;
 }
